--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,27 +16,45 @@
     "max-len": [
       "warn",
       {
-        "code": 80
+        "code": 100
       }
     ],
-    "comma-dangle": ["warn", "always-multiline"],
+    "comma-dangle": [
+      "warn",
+      "always-multiline"
+    ],
     "no-console": 1,
     "no-extra-boolean-cast": 0,
     "semi": 1,
-    "indent": ["warn", 2],
+    "indent": [
+      "warn",
+      2,
+      {
+        "SwitchCase": 1
+      }
+    ],
     "@typescript-eslint/no-misused-promises": 0,
     "@typescript-eslint/no-floating-promises": 0,
     "node/no-process-env": 1,
     "node/no-unsupported-features/es-syntax": [
       "error",
-      { "ignores" : ["modules"] }
+      {
+        "ignores": [
+          "modules"
+        ]
+      }
     ],
     "node/no-missing-import": 0,
     "node/no-unpublished-import": 0
   },
   "settings": {
     "node": {
-      "tryExtensions": [".js", ".json", ".node", ".ts"]
+      "tryExtensions": [
+        ".js",
+        ".json",
+        ".node",
+        ".ts"
+      ]
     }
   }
 }
