--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
   },
   "dependencies": {
     "@prisma/client": "^4.7.1",
+    "@types/cors": "^2.8.13",
     "bcrypt": "^5.1.0",
     "command-line-args": "^5.2.1",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
@@ -40,7 +42,8 @@
     "jsonfile": "^6.1.0",
     "jsonwebtoken": "^8.5.1",
     "module-alias": "^2.2.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -63,6 +66,7 @@
     "fs-extra": "^11.1.0",
     "jasmine": "^4.5.0",
     "nodemon": "^2.0.20",
+    "prettier": "2.8.0",
     "prisma": "^4.7.1",
     "supertest": "^6.3.2",
     "ts-node": "^10.9.1",
