--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "schoolAPI",
+  "name": "school-api",
   "version": "0.0.0",
   "scripts": {
     "build": "npx ts-node build.ts",
@@ -27,7 +27,7 @@
     "node": ">=8.10.0"
   },
   "dependencies": {
-    "@prisma/client": "^4.7.1",
+    "@prisma/client": "^4.8.0",
     "@types/cors": "^2.8.13",
     "bcrypt": "^5.1.0",
     "command-line-args": "^5.2.1",
@@ -67,7 +67,7 @@
     "jasmine": "^4.5.0",
     "nodemon": "^2.0.20",
     "prettier": "2.8.1",
-    "prisma": "^4.7.1",
+    "prisma": "^4.8.0",
     "supertest": "^6.3.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.1.1",
