--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,7 @@
     "project": "./tsconfig.json"
   },
   "rules": {
+    "@typescript-eslint/ban-ts-comment": 0,
     "max-len": [
       "warn",
       {
